# skmf

./: .gitignore  Cargo.toml  README.md  config.toml-dist  skmf.service  skmf.timer
src/: main.rs  mf.rs  sk.rs
src/testdata/: paymentHistory_20220724.csv  prepaidHistory_20220720.csv
